# compile-to-wasm-lang

./: .gitignore  Cargo.toml  README.md  run-wasm.js
llvm-project/: lld-10.0.1.src.tar.xz
src/: main.rs
src/snapshots/: compile_to_wasm_rust__parser__it_parses_tokens.snap  compile_to_wasm_rust__typecheck__it_typechecks_declaration.snap
tests/: cli.rs
tests/snapshots/: cli__global_declarations.snap
