[package]
name = "compile-to-wasm-rust"
version = "0.1.0"
authors = ["Pete Gleeson <pgleeson@atlassian.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
insta = "0.16"

[dependencies]
structopt = "0.3"
llvm-sys = "100"

